option java_package = "com.chuangyou.common.protobuf.pb.battle";
option java_outer_classname = "DamageMsgProto";

message DamageMsg {
	optional int64 sourceId = 1; //伤害源ID
	optional int64 targetId = 2; //目标ID
	optional int32 damageType = 3; //伤害类型
	optional int32 damageValue = 4; //伤害值
	optional int32 leftValue = 5; //剩余值
	optional int32 tipType = 6; // 0 正常 1 暴击 2 MISS
	optional int32 skillId = 7; //技能ID
	optional int32 order = 8; //第几段伤害
}

